Final fix of header overflow image in mobile view

--- a/styles.css
+++ b/styles.css
@@ -570,6 +570,7 @@ body {font-family: "Lato", sans-serif;}
       @media screen and (max-width: 900px) {
       .logonew{
       visibility: hidden;
+      display:none;
       }
     }
 
